--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-react-portfolio-template",
-  "homepage": "https://YourUserName.github.io/your-repo/",
+  "homepage": "https://raquelcps.github.io/hi/",
   "version": "1.0.4",
   "private": true,
   "dependencies": {
